[package]
name = "api_be"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0.2", features = ["full"] }
async-graphql = "4"
async-graphql-warp = "4"
warp = "0.3"
http = "0.2"
chrono = "0.4.28"
reqwest = "0.11"
json = "0.12.4"
tokio-postgres = "0.7"
serde = "1.0"
serde_json = "1.0"

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]